# tmsolve

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README  README.md  TC-mingw.cmake  TODO  calc_tests.txt  equation.c  install.sh  interactive.c  interactive.h  libtmsolve.h  main.c  man tmsolve.txt  test.c  tests.txt  tic-tac-toe.c  version.h
tests/: accuracy_test.txt  resilience_test.txt
